--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="hours">00</div>
 		<div id="minutes">00</div>
 		<div id="seconds">00</div></div>
-	<p>Unti i finish my course. I also have a <a href="https://github.com/Krenity" class="rainbow" target="_blank">GITHUB</a> it has all my projects which are open source, though you can also view them below. I personally reccomend making your own website, even if youre using a website builder it could be a great starting place</p></div>
+	<p>Until i finish my course. I also have a <a href="https://github.com/Krenity" class="rainbow" target="_blank">GITHUB</a>, it has all my projects which are open source, though you can also view them below. I personally reccomend making your own website, even if youre using a website builder it could be a great starting place</p></div>
 	
 
 
