--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<div class="project-element"><a class="rainbow" href="https://github.com/Krenity/Lab-4---Cookie-clicker-game" target="_blank">A working Cookie Clicker type game made in python in about a week</a></div>
 			<div class="project-element"><a class="rainbow" href="https://github.com/Krenity/JKLM-Bomb-party-bot" target="_blank">A working python bot for the game bomb party on jklm.fun made in a few hours</a></div>
 			<div class="project-element"><a class="rainbow" href="https://github.com/Krenity/Lab-5" target="_blank">A Game similar to JumpKing made in 4 weeks using GoDot</a></div>
+			<div class="project-element"><a class="rainbow" href="https://github.com/Krenity/Mordhau-Cheat" target="_blank">A Mordhau external cheat created in C#</a></div>
 		</div>
 		  
 
