Updated for Exams and accesibility

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 <body>
 	<!-- below is the About me section -->
 	<div class="about-me">
-	<h1>ABOUT ME</h1><p class="glow-on-hover">I'm Philip, I absolutely love working with and on computers, this is my personal website just to mess around, learning things like website creation or showing my personal projects, I study T-Levels in DPDD, Whats that? Its <a class="rainbow" href="https://www.tlevels.gov.uk/students/subjects/digital-production-design-development" target="_blank">THIS,</a> I started on the 5th of september, and as of now have</p>
+	<h1>ABOUT ME</h1><p class="glow-on-hover">I'm Philip, I absolutely love working with and on computers, this is my personal website just to mess around, learning things like website creation or showing my personal projects, I study T-Levels in DPDD, Whats that? Its <a class="rainbow" href="https://www.tlevels.gov.uk/students/subjects/digital-production-design-development" target="_blank">THIS,</a> I started on the 5th of september, and as of now have finished my studies 🎉🎉🎉And I will get my grades in: </p>
+	
 	<!-- Below is the Clock -->
 	<div class="countdown">
-		<div id="days">00</div>
-		<div id="hours">00</div>
-		<div id="minutes">00</div>
-		<div id="seconds">00</div></div>
-	<p>Until i finish my course. I also have a <a href="https://github.com/Krenity" class="rainbow" target="_blank">GITHUB</a>, it has all my projects which are open source, though you can also view them below. I personally reccomend making your own website, even if youre using a website builder it could be a great starting place</p></div>
+		<div style="display: flex;" id="days">00</div>
+		<div style="display: flex;" id="hours">00</div>
+		<div style="display: flex;" id="minutes">00</div>
+		<div style="display: flex;" id="seconds">00</div>
+	</div>
+
+	<p>I also have a <a href="https://github.com/Krenity" class="rainbow" target="_blank">GITHUB</a>, it has all my projects which are open source, though you can also view them below. I personally reccomend making your own website, even if youre using a website builder it could be a great starting place</p></div>
 	
 
 
