Added year to start date of course

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- below is the About me section -->
 	<div class="about-me">
-	<h1>ABOUT ME</h1><p class="glow-on-hover">I'm Philip, I absolutely love working with and on computers, this is my personal website just to mess around, learning things like website creation or showing my personal projects, I study T-Levels in DPDD, Whats that? Its <a class="rainbow" href="https://www.tlevels.gov.uk/students/subjects/digital-production-design-development" target="_blank">THIS,</a> I started on the 5th of september, and as of now have finished my studies 🎉🎉🎉And I will get my grades in: </p>
+	<h1>ABOUT ME</h1><p class="glow-on-hover">I'm Philip, I absolutely love working with and on computers, this is my personal website just to mess around, learning things like website creation or showing my personal projects, I study T-Levels in DPDD, Whats that? Its <a class="rainbow" href="https://www.tlevels.gov.uk/students/subjects/digital-production-design-development" target="_blank">THIS,</a> I started on the 5th of september 2022, and as of now have finished my studies 🎉🎉🎉And I will get my grades in: </p>
 	
 	<!-- Below is the Clock -->
 	<div class="countdown">
